2024-07-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* Release 1.1

	* Implement the "revert", "freeze", and "thaw" commands.

2024-07-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement the "edit" command.

2024-06-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* Release 1.0

	* Use cgroup.kill to stop all processes in a container, instead of
	manually sending SIGKILL to each process.

2024-06-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* INSTALL: updated uninstallation/upgrade documentation.

2024-04-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* Release 0.94

	* inittab.C: scan rc.D scripts to heuristically detect if they
	implement "restart" or "reload", define the command in the converted
	unit file.

2024-04-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* hook.C: New container, system/update-logrotate, required by
	system/boot, reads logrotate's configuration and updates a modified
	configuration that uses vera to restart logrotated containers.

	* vera.C: The "inittab" command no longer includes "rehook". Change
	"make install" for slackware to run both commands, separately, for
	no change in behavior. The "rehook" command also attempts to repair
	all hooked scripts if they were inadvertently overwritten by a manual
	update.

2024-04-13  Sam Varshavchik  <mrsam@courier-mta.com>

	* vera.C: suppress containers without processes from "status", by
	default, add --all option to still show them.

2024-04-11  Sam Varshavchik  <mrsam@courier-mta.com>

	* Release 0.93

2024-04-10  Sam Varshavchik  <mrsam@courier-mta.com>

	* inittab.C (inittab): Add a system/network-online target stub.
	Include system/networkmanager-wait-online in the package. Increase
	/etc/rc.d/rc.M's starting timeout to five minutes.

	* proc_container.C (proc_containerObj::compare_and_log): improve
	logging of updated containers.

2024-04-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* Release 0.92

	* hook.C: Packaging improvements. Going forward the vera Slackware