@@ -1,3 +1,8 @@
+2024-07-28  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* vera.C: The "status" command will imply --stopped if any units
+	are provided.
+
 2024-07-21  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* Release 1.1
